tests/pos/cli_args/src/main/scala/Main.scala
@main def cliargs(args: String*): Unit =
  args.foreach(println)
