tests/neg/unresolved_ref/src/main/scala/Main.scala
@main def app(): Unit =
  val x = NonExistentClass.doSomething()
  println(x)
